[gd_scene load_steps=55 format=3 uid="uid://jjjg2hnmsyok"]

[ext_resource type="Texture2D" uid="uid://wgg03cjifs1" path="res://Assets/Monsters_Creatures_Fantasy/Goblin/Attack.png" id="1_bcyi3"]
[ext_resource type="Script" path="res://Scenes/enemy/goblin/goblin.gd" id="1_w18sk"]
[ext_resource type="Texture2D" uid="uid://c1ldg31ivg243" path="res://Assets/Monsters_Creatures_Fantasy/Goblin/Idle.png" id="1_yj6mb"]
[ext_resource type="Texture2D" uid="uid://6v0f7vjkkipb" path="res://Assets/Monsters_Creatures_Fantasy/Goblin/Death.png" id="2_lnww3"]
[ext_resource type="Texture2D" uid="uid://6wa0g33263hg" path="res://Assets/Monsters_Creatures_Fantasy/Goblin/Take Hit.png" id="3_hipgd"]
[ext_resource type="Texture2D" uid="uid://csacv1w3seums" path="res://Assets/Monsters_Creatures_Fantasy/Goblin/Run.png" id="5_6iwcj"]
[ext_resource type="PackedScene" uid="uid://bwfpwgwgdnhdo" path="res://Scenes/enemy/mob_health.tscn" id="7_ne2oj"]
[ext_resource type="AudioStream" uid="uid://sb5p2j4gvqib" path="res://Assets/korotkiy-metallicheskiy-zvuk-zatochki-lezviya.mp3" id="8_i2fcl"]
[ext_resource type="AudioStream" uid="uid://dh7wxc10wq5tb" path="res://Assets/walking/path_01_a.mp3" id="9_0cwtp"]
[ext_resource type="AudioStream" uid="uid://cbw5woupx7hvg" path="res://Assets/walking/path_01_b.mp3" id="10_c6giq"]
[ext_resource type="AudioStream" uid="uid://tiq5xfdqbt2r" path="res://Assets/walking/path_01_c.mp3" id="11_k4ia5"]
[ext_resource type="AudioStream" uid="uid://n205ebterxds" path="res://Assets/bezjalostnyiy-silnyiy-udar-nojom-po-tseli.mp3" id="12_px0mf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hyttd"]
size = Vector2(82, 111.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_idljv"]
atlas = ExtResource("1_bcyi3")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxlf8"]
atlas = ExtResource("1_bcyi3")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_oan68"]
atlas = ExtResource("1_bcyi3")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c2df"]
atlas = ExtResource("1_bcyi3")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycsn3"]
atlas = ExtResource("1_bcyi3")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_aag6g"]
atlas = ExtResource("1_bcyi3")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_raqly"]
atlas = ExtResource("1_bcyi3")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv0o8"]
atlas = ExtResource("1_bcyi3")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4in7n"]
atlas = ExtResource("2_lnww3")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dlum"]
atlas = ExtResource("2_lnww3")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx7pv"]
atlas = ExtResource("2_lnww3")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd6ep"]
atlas = ExtResource("2_lnww3")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_biio8"]
atlas = ExtResource("3_hipgd")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dptdw"]
atlas = ExtResource("3_hipgd")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_54ydf"]
atlas = ExtResource("3_hipgd")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhd47"]
atlas = ExtResource("3_hipgd")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lyxv"]
atlas = ExtResource("1_yj6mb")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v65m2"]
atlas = ExtResource("1_yj6mb")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucgva"]
atlas = ExtResource("1_yj6mb")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gx8t"]
atlas = ExtResource("1_yj6mb")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6o8r"]
atlas = ExtResource("5_6iwcj")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj8wk"]
atlas = ExtResource("5_6iwcj")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4vcf"]
atlas = ExtResource("5_6iwcj")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rta3"]
atlas = ExtResource("5_6iwcj")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgkk1"]
atlas = ExtResource("5_6iwcj")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwj2d"]
atlas = ExtResource("5_6iwcj")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5uqb"]
atlas = ExtResource("5_6iwcj")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pj5qp"]
atlas = ExtResource("5_6iwcj")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_gfrbb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_idljv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxlf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oan68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c2df")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycsn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aag6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raqly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv0o8")
}],
"loop": false,
"name": &"ATTACK",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4in7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dlum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd6ep")
}],
"loop": false,
"name": &"DEATH",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_biio8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dptdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54ydf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhd47")
}],
"loop": true,
"name": &"HIT",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lyxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v65m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucgva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gx8t")
}],
"loop": true,
"name": &"IDLE",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6o8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj8wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4vcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rta3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgkk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwj2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5uqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pj5qp")
}],
"loop": true,
"name": &"MOVE",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_7pcpx"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["ATTACK"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.566667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_u4fwj"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["DEATH"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer3:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1j5gw"]
length = 0.571429
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["HIT"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer3:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1y5hv"]
length = 0.571429
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["IDLE"]
}

[sub_resource type="Animation" id="Animation_hothh"]
length = 1.14286
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286, 0.857143, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["MOVE"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1.10218, 1, 1),
"update": 1,
"values": [true, true, true]
}

[sub_resource type="Animation" id="Animation_12c7r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/AttackRange/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer3:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3hk3r"]
_data = {
"ATTACK": SubResource("Animation_7pcpx"),
"DEATH": SubResource("Animation_u4fwj"),
"HIT": SubResource("Animation_1j5gw"),
"IDLE": SubResource("Animation_1y5hv"),
"MOVE": SubResource("Animation_hothh"),
"RESET": SubResource("Animation_12c7r")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lk0ph"]
size = Vector2(98, 112)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_akthh"]
radius = 35.0
height = 116.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1l7b"]
size = Vector2(98.8235, 87)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fm5g5"]
streams_count = 3
stream_0/stream = ExtResource("9_0cwtp")
stream_1/stream = ExtResource("10_c6giq")
stream_2/stream = ExtResource("11_k4ia5")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgomi"]
size = Vector2(1108.24, 164.706)

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(0.85, 0.85)
collision_layer = 4
floor_max_angle = 1.39626
script = ExtResource("1_w18sk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -2)
shape = SubResource("RectangleShape2D_hyttd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, -29)
scale = Vector2(3.06333, 3.06333)
sprite_frames = SubResource("SpriteFrames_gfrbb")
animation = &"ATTACK"
autoplay = "IDLE"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3hk3r")
}
autoplay = "IDLE"

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(89, -1)
shape = SubResource("RectangleShape2D_lk0ph")

[node name="DamageBox" type="Node2D" parent="AttackDirection/AttackRange"]

[node name="HurtBox" type="Area2D" parent="AttackDirection/AttackRange/DamageBox"]
collision_layer = 64
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange/DamageBox/HurtBox"]
shape = SubResource("CapsuleShape2D_akthh")

[node name="HitBox" type="Area2D" parent="AttackDirection/AttackRange/DamageBox"]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange/DamageBox/HitBox"]
position = Vector2(89.4118, -0.5)
shape = SubResource("RectangleShape2D_u1l7b")
disabled = true

[node name="MobHealth" parent="." instance=ExtResource("7_ne2oj")]
position = Vector2(1, -71)
scale = Vector2(0.25, 0.25)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_i2fcl")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_fm5g5")
volume_db = -20.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_px0mf")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wgomi")

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/AttackRange/DamageBox/HurtBox" to="MobHealth" method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AttackDirection/AttackRange/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="damage_recived" from="MobHealth" to="." method="_on_mob_health_damage_recived"]
[connection signal="no_hp" from="MobHealth" to="." method="_on_mob_health_no_hp"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
